# memepu

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  DEPENDENCIES  README  README.md  blog.txt  cpu.txt  kicad_script.py  next_version_notes.txt  notes.txt  parts.txt  parts_needed.txt  run.py  todo.txt
memelang/: .editorconfig  CMakeLists.txt  a.out  build.py
memelang/docs/: todo.md
memelang/examples/: basic.meme  test.meme  vector.meme
memelang/include/: common.h  compile.h  file_contents.h  llvm.h  parser.h  tokeniser.h  types.h
memelang/src/: common.cpp  compile.cpp  file_contents.cpp  llvm.cpp  parser.cpp  tokeniser.cpp
memelang/src/programs/: compiler.cpp
memepu/: CMakeLists.txt
memepu/asm/: interrupt.asm
memepu/include/: asm.h  common.h  control.h  control_constants.h  led.h  mlu.h
memepu/src/: asm.cpp  control.cpp  led.cpp
memepu/src/programs/: assembler.cpp  eeprom.cpp
verilog/: CMakeLists.txt  bootstrapper.v  buffer16.v  buffer32.v  buffer8.v  buffer_mux2x32.v  buffer_mux2x8.v  buffer_mux3x32.v  buffer_mux3x8.v  buffer_mux4x32_decoded.v  buffer_mux4x8.v  chip7400.v  chip7404.v  chip7408.v  chip74107.v  chip74138.v  chip74139.v  chip74151.v  chip74154.v  chip74161.v  chip7416374.v  chip74238.v  chip74245.v  chip74273.v  chip74299.v  chip7432.v  chip74590.v  chip7474.v  chip7486.v  chip74LVC162244.v  common.v  control_logic.v  eeprom.v  kpu.v  lut.v  lut12x32.v  lut12x8.v  lut17x8.v  memecad_map.json  microcode.hex  (+17 more)
verilog/cmake/: DownloadGTest.cmake  FindVerilator.cmake
verilog/include/: common.h
verilog/src/: common.cpp
verilog/src/programs/: main.cpp  tests.cpp
verilog/verilog/: CMakeLists.txt  chip7400.v  chip7404.v  chip74299.v  chips.v  common.v  test.v
verymeme/: .editorconfig  CMakeLists.txt  TODO  run.py
verymeme/assets/: memelang.ebnf  memelang.iro  memelang.md  memelang.tmLanguage
verymeme/assets/MemelangLexer/: setup.py
verymeme/assets/kicad/: symbols.lib
verymeme/cmake/: DownloadGTest.cmake  FindSFML.cmake  FindYosys.cmake
verymeme/include/: common.h  kicad_parser.h  test_printer.h
verymeme/include/memeasm/: assembler.h
verymeme/include/memecad/: mapper.h  parser.h  schematic.h  types.h  util.h  yosys_module.h
verymeme/include/memelang/: ast.h  compile.h  constants.h  exec.h  expression.h  file_contents.h  interpreter.h  memory.h  parser.h  scopes.h  tokeniser.h  type.h  types.h  vm.h
verymeme/include/memeroute/: parser.h  render_shapes.h  renderer.h  router.h  router_worker.h  types.h
verymeme/include/memesim/: cli.h  display.h  simulator.h
verymeme/include/memeware/: constants.h  microcode.h  util.h
verymeme/include/verymeme/: bimap.h  common.h  concurrent_queue.h  file.h  firmware_constants.h  geom.h  macros.h  parser.h  string_util.h  term.h  test_printer.h  tokeniser.h  tokenizer.h  util.h
verymeme/kicad/full_adder/: full_adder.pro  full_adder.sch
verymeme/memecad_maps/: sram.json
verymeme/scripts/: parse_bdf.py
verymeme/src/: common.cpp  kicad_parser.cpp  test_printer.cpp
verymeme/src/memeasm/: assembler.cpp
verymeme/src/memecad/: mapper.cpp  parser.cpp  schematic.cpp  schematic.h  types.cpp  types.h  util.cpp  util.h  yosys_module.cpp
verymeme/src/memelang/: ast.cpp  compile.cpp  exec.cpp  exec.h  expression.cpp  file_contents.cpp  interpreter.cpp  memelang.ebnf  memory.cpp  parser.cpp  scopes.cpp  tokeniser.cpp  type.cpp  type.h  types.cpp  vm.cpp
verymeme/src/memepile/: integral.meme  main.meme  map.meme  memory.meme  pointer.meme  result.meme  stdintf.meme  string.meme  token.meme  vector.meme
verymeme/src/memeroute/: parser.cpp  render_shapes.cpp  renderer.cpp  router.cpp  router_worker.cpp  types.cpp
verymeme/src/memesim/: cli.cpp  display.cpp  display.h  simulator.cpp  simulator.h
verymeme/src/memeware/: microcode.cpp  util.cpp
verymeme/src/programs/: generate_firmware.cpp  memeasm.cpp  memecad.cpp  memelang.cpp  memeroute.cpp  memesim.cpp  memeware.cpp  test_harness.cpp  tests.cpp  yosys_test.cpp
verymeme/src/tests/: common_tests.cpp  kicad_tests.cpp  memecad_tests.cpp  memelang_tests.cpp  memeroute_tests.cpp  tests.cpp  verilator_tests.cpp
verymeme/src/verymeme/: common.cpp  concurrent_queue.h  file.cpp  file.h  geom.cpp  geom.h  parser.cpp  string_util.cpp  term.cpp  test_printer.cpp  tokenizer.cpp  util.cpp
verymeme/test_data/: full_adder.sch
verymeme/test_data/alu0/: alu.v  alu_lookahead.v  alu_slice.v  sram.v  sram17x8.v
verymeme/test_data/asm/: 7bitace.ksm  asm0.ksm  asm1.ksm  asm2.ksm  asm3.ksm  asm4.ksm  drawing.ksm
verymeme/test_data/asm0/: asm.ksm
verymeme/test_data/common/: chip7408.v  chip7432.v  chip7486.v  memecad_map.json
verymeme/test_data/hierarchical0/: full_adder.v  tapb_top_level.v  two_a_plus_b.v
verymeme/test_data/memecad/: chip7408.v
verymeme/test_data/memelang/: 1.meme  2.meme  arrays.meme  auto_initializer.meme  bitfields.meme  complex.meme  empty_array_initializer.meme  empty_enum.meme  empty_struct.meme  empty_struct_initializer.meme  expr_types.meme  expression.meme  fib_iter.meme  fib_recursive.meme  function_definition.meme  if.meme  inline_asm.meme  interface.meme  match.meme  parse_expression.meme  parse_function_definition.meme  parse_interface.meme  parsing.meme  pointers.meme  regression1.meme  simple.meme  tmp.meme  tricky_if.meme  vector.meme
verymeme/test_data/parsing0/: full_adder.sch
verymeme/verilog/: CMakeLists.txt  alu.v  alu_lookahead.hex  alu_lookahead.v  alu_slice.hex  alu_slice.v  boot.hex  bootstrapper.v  buffer16.v  buffer32.v  buffer8.v  buffer_mux.v  buffer_mux2x32.v  buffer_mux2x8.v  buffer_mux3x32.v  buffer_mux3x8.v  buffer_mux4x32_decoded.v  buffer_mux4x8.v  chip7400.v  chip7404.v  chip7408.v  chip74107.v  chip74138.v  chip74139.v  chip74151.v  chip74154.v  chip74161.v  chip7416374.v  chip74238.v  chip74273.v  chip74299.v  chip7432.v  chip74590.v  chip7474.v  chip7486.v  chip74LVC162244.v  common.v  control_logic.v  eeprom.v  formal.hex  (+29 more)
verymeme/verilog/formally_verify_kpu/: PASS  config.sby  formally_verify_kpu.xml  logfile.txt  status
verymeme/verilog/test/: alu.sch
(+554 files in other folders)
